--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,15 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Configuration files
+*.ini
+.idea
+
+*.xls
+*.csv
+*.xlsx
+.xlsx
+
+input/*
+proccessed/*
